<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Quickies">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"

        >
        <ImageButton
            android:id="@+id/btnReturn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/back"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Umits_converter"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/btnReturn"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageButton
            android:id="@+id/btnFilter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/settings_sliders"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginTop="10dp"

        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="3"
            android:padding="8dp"
            android:textAlignment="center"
            android:alignmentMode="alignBounds"
android:useDefaultMargins="true"
            android:layout_gravity="center_horizontal"




            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation= "vertical"
                android:background="@drawable/card"
               android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/flash"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="power"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardTemperature"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/thermometer"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardEnergy"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/fire"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/energy"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardTime"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"

                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/hourglass"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardData"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/cloud_network"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardPresure"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/tool"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presure"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardSpeed"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/flash"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardArea"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/maximize"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardLenght"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/measure"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lenght"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardVolume"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/measure2"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardMass"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/load"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mass"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cardTip"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/flash"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/discount"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Percentage"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/flash"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Angules"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:background="@drawable/card"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/flash"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="BMI"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />


            </LinearLayout>






        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>